# ongwatch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_TODO.md  CLAUDE.md  OUTPUTS_PLAN.md  README.md  TOPICS.md  examples.md  messages.txt  ongwatch.conf  ongwatch.py  ongwatch.toml  pyproject.toml  requirements.txt  test.py  test2.py
.claude/: settings.local.json
.github/: copilot-instructions.md
_ongwatch/: dispatcher.py  event.py  events.py  streamelements.py  streamlabs.py  twitch.py  util.py
_ongwatch/auth/: twitch.py
_ongwatch/backends/: __init__.py  streamelements.py  streamlabs.py  synthetic.py  test_crash.py  twitch.py
_ongwatch/backends/auth/: twitch.py
_ongwatch/outputs/: __init__.py  base.py  bumplog.py  console.py  db.py  manager.py  mqtt.py  sqlite.py  test_crash.py  testing.py  types.py
_ongwatch/outputs/bumplog/: __init__.py
_ongwatch/outputs/mqtt/: __init__.py
doc/: streamelements.md  streamlabs.md  twitch.md
