[project]
name = "ongwatch"
version = "0.0.0"
description = "Watch for stream events and share them via a message bus"
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "GPL-3.0-or-later"}
authors = [ { name = "TDV Alinsa", email = "alinsa-github@lupine.org" } ]
keywords = ["twitch", "streaming", "events", "message-bus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.13"

dependencies = [
    "twitch.py>=3.2.10, <4.0.0",
    "python-socketio[client,asyncio_client]==4.6.1",
    "tdvutil",
    "pytz",
    "toml",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "types-toml",
    "types-pytz",
    "flake8-async",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-import-conventions",
    "flake8-pyproject",
    "flake8-secure-coding-standard",
    "flake8_simplify",
    "flake8-use-pathlib",
]


[project.scripts]
ongwatch = "ongwatch:main"


[project.urls]
"Homepage" = "https://github.com/alinsavix/ongwatch"
"Bug Reports" = "https://github.com/alinsavix/ongwatch/issues"
"Source" = "https://github.com/alinsavix/ongwatch"
# "Documentation" = = "https://ongwatch.readthedocs.io/en/latest/"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.*)$"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "_ongwatch/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["_ongwatch"]

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"


[tool.mypy]
python_version = "3.13"

mypy_path = "typings"
exclude = "^(tests/|conftest\\.py|outputs/|typings/|out/)"

# follow_imports = "silent"
# ignore_missing_imports = true
namespace_packages = true
warn_unused_configs = true

strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true

# [[tool.mypy.overrides]]
# module = [ "kaitaistruct.*" ]
# ignore_missing_imports = true


[tool.autopep8]
max_line_length = 96

ignore = [
    "E302", # not enough blank lines (sometimes useful)
    "E303", # too many blank lines (sometimes useful!)
    "E402", # "module level import not at top of file"
]


[tool.isort]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

known_first_party = [ ]


# We're only going to set a couple of sphinx-pyproject values here -- things
# not related to the layout, that would benefit from a single source of truth.
# Most layout-specific things is still in the docs `conf.py` file.
#
# For now, though, this stays commented out until the plugin can cope with us
# using dynamic versions.
# [tool.sphinx-pyproject]
# github_username = "alinsavix"
# github_repository = "python-skeleton"
